--- a/javacode/.classpath
+++ b/javacode/.classpath
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="src" path="libs"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/apache-mime4j-0.6.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/bsh-2.0b4.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/cglib-nodep-2.1_3.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/commons-codec-1.10.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/commons-exec-1.3.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/gson-2.3.1.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/guava-19.0.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/hamcrest-library-1.3.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/httpclient-4.5.1.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/httpcore-4.4.3.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/httpmime-4.5.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/jcommander-1.48.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/jna-4.1.0.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/jna-platform-4.1.0.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/netty-3.5.7.Final.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/phantomjsdriver-1.2.1.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/libs/testng-6.9.9.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/selenium-java-2.53.1.jar"/>
+	<classpathentry kind="lib" path="F:/Gitcode/DanielCode/javacode/selenium-java-2.53.1-srcs.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
